--- a/party/templates/party/redesign/party_blocks/no_party.html
+++ b/party/templates/party/redesign/party_blocks/no_party.html
@@ -146,7 +146,7 @@
                     {% if party.image %}
                         <img src="{{ party.image.url }}">
                     {% else %}
-                        <img src="{% static 'img/nopic_party.png' %}">
+                        <img src="{% static 'img/nopic_party.svg' %}">
                     {% endif %}
 					</td>
 					<td class="j-t-two" onclick="window.open('/party/{{ party.pk }}/')" style="cursor: pointer;">
