--- a/player/templates/player/redesign/player_status.html
+++ b/player/templates/player/redesign/player_status.html
@@ -3,7 +3,7 @@
 <header class="info">
 
 	<a href="/profile" class="info__profile-link">
-		<img {% if player.image %}src="{{ player.image.url }}"{% else %}src="{% static 'img/nopic.png' %}"{% endif %} class="info__ava"> <!-- аватар игрока -->
+		<img {% if player.image %}src="{{ player.image.url }}"{% else %}src="{% static 'img/nopic.svg' %}"{% endif %} class="info__ava"> <!-- аватар игрока -->
 	</a>
 
 	<div class="info__left-col">
