--- a/player/templates/player/redesign/lists/uni_list_templatetag.html
+++ b/player/templates/player/redesign/lists/uni_list_templatetag.html
@@ -66,7 +66,7 @@
 										{% if sub_obj_img %}
 										<img src="{{ sub_obj_img|get_attr:'url' }}" alt="{{ col }}_{{ sub_col }}">
 										{% else %}
-										<img src="{% static 'img/nopic.png' %}" alt="{{ col }}_{{ sub_col }}">
+										<img src="{% static 'img/nopic.svg' %}" alt="{{ col }}_{{ sub_col }}">
 										{% endif %}
 									{% endwith %}
 								  	<!--дата_время-->
@@ -97,7 +97,7 @@
 							{% if obj_img %}
 							<img src="{{ obj_img|get_attr:'url' }}" alt="{{ col }}">
 							{% else %}
-							<img src="{% static 'img/nopic.png' %}" alt="{{ col }}">
+							<img src="{% static 'img/nopic.svg' %}" alt="{{ col }}">
 							{% endif %}
 						{% endwith %}
 					  <!--дата_время-->
