--- a/party/templates/party/redesign/manage.html
+++ b/party/templates/party/redesign/manage.html
@@ -203,7 +203,7 @@
                                 <form class="rm_role_form" role="form">
                                     {% csrf_token %}
                                     <input type="hidden" name="post_id" value="{% localize off %}{{ role.pk }}{% endlocalize %}">
-									<a type="submit" rel="noopener noreferrer" style="cursor: pointer" onclick="$(this).parent().submit()">тЭМ</a>
+									<a type="submit" rel="noopener noreferrer" style="cursor: pointer" onclick="$(this).parent().submit()">❌</a>
                                 </form>
                                 {% endif %}
 							</td>
