--- a/player/templates/player/redesign/profile.html
+++ b/player/templates/player/redesign/profile.html
@@ -3,7 +3,8 @@
 {% load static %}
 {% load tz %}
 {% load capitalize %}
-{% load profile_blocks.redesign.repost_tab %}
+{% load redesign.profile_blocks.repost_tab %}
+{% load redesign.template_svg.nopic %}
 {% block content %}
 <section class="profile">
 
@@ -51,8 +52,9 @@
 						<path d="M22 2v22h-20v-22h3c1.23 0 2.181-1.084 3-2h8c.82.916 1.771 2 3 2h3zm-11 1c0 .552.448 1 1 1 .553 0 1-.448 1-1s-.447-1-1-1c-.552 0-1 .448-1 1zm9 1h-4l-2 2h-3.897l-2.103-2h-4v18h16v-18zm-13 9.729l.855-.791c1 .484 1.635.852 2.76 1.654 2.113-2.399 3.511-3.616 6.106-5.231l.279.64c-2.141 1.869-3.709 3.949-5.967 7.999-1.393-1.64-2.322-2.686-4.033-4.271z"/>
 					</svg>
 				</button>
-
-				<img src="{% if player.image %}{{ player.image.url }}{% else %}{% static 'img/nopic.svg' %}{% endif %}" class="profile__ava" {% if player.party %}{% if player.party.members_image %}{% if party_back %}style="background-image: url({{ player.party.members_image.url }}); background-size: cover;"{% endif %}{% endif %}{% endif %}>
+				{% if player.image %}
+				<img src="{{ player.image.url }}" class="profile__ava" {% if player.party %}{% if player.party.members_image %}{% if party_back %}style="background-image: url({{ player.party.members_image.url }}); background-size: cover;"{% endif %}{% endif %}{% endif %}>
+				{% else %}{% nopic player '' %}{% endif %}
 				{% if ava_border %}
 				<svg class="profile__ava-border" viewBox="0 0 {% localize off %}{{ ava_border.box_x }} {{ ava_border.box_y }}{% endlocalize %}">
 					{% autoescape off %}
