--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -3908,7 +3908,7 @@ p.overview__love-stat-timer {
   margin-right: 16rem;
 }
 
-.party__mana-ava-block > img, svg {
+.party__mana-ava-block > img, .party__mana-ava-block > svg {
   display: block;
   width: 100%;
   height: 100%;
@@ -5632,7 +5632,7 @@ p.overview__love-stat-timer {
   line-height: 1.25;
 }
 
-.ct__js-table img, svg {
+.ct__js-table img, .ct__js-table svg {
   display: inline-block;
   width: 30rem;
   height: 30rem;
